# netbox-notices

./: .gitignore  .pre-commit-config.yaml  404.html  BUILD.md  CHANGELOG.md  Makefile  PERMISSIONS.md  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.devcontainer/: .gitignore  Dockerfile-plugin_dev  devcontainer.json  docker-compose.yml  load_plugin_demo.py
.devcontainer/configuration/: configuration.py  plugins.py
.github/workflows/: ci.yml  mkdocs.yml  publish.yml
changelog/: index.html
contributing/: index.html
docs/: configuration.md  installation.md  integrations_aws_ses.md  outgoing-notifications.md  parsers.md  permissions.md  zensical.toml
docs/events/: calendar-and-ical.md  impact.md  maintenance.md  outage.md
docs/plans/: 2025-10-29-outage-tracking-implementation.md  2025-11-06-reschedule-maintenance.md  2025-11-07-netbox-notices-refactor-design.md  2026-01-22-outgoing-notifications-design.md  2026-01-22-outgoing-notifications-implementation.md  2026-02-16-upstream-improvements-design.md  2026-02-16-upstream-improvements-implementation.md
integrations/aws-ses/: README.md  samconfig.toml  template.yaml
integrations_aws_ses/: index.html
netbox_circuitmaintenance/: __init__.py  forms.py  models.py  navigation.py  tables.py  template_content.py  urls.py  views.py  widgets.py
netbox_circuitmaintenance/api/: serializers.py  urls.py  views.py
notices/: __init__.py  checks.py  choices.py  constants.py  filtersets.py  forms.py  ical_utils.py  navigation.py  resolvers.py  search.py  signals.py  tables.py  template_content.py  timeline_utils.py  urls.py  utils.py  validators.py  views.py
notices/api/: urls.py
notices/graphql/: filters.py  schema.py  types.py
notices/migrations/: 0001_initial.py  0005_messagetemplate_preparedmessage_templatescope.py  0006_rename_messaging_models.py  0007_alter_notificationtemplate_contact_roles_and_more.py  0008_alter_maintenance_end_alter_maintenance_start_and_more.py  0009_add_impact_sites_locations.py  0010_backfill_impact_sites_locations.py
notices/models/: __init__.py  events.py  (+1 more)
outgoing-notifications/: index.html
parsers/: index.html
parsers_sns_lambda/: index.html
search/: search_index.json
tests/: conftest.py  test_api_serializers.py  test_brief_fields.py  test_configuration.py  test_dashboard.py  test_date_validation.py  test_filterset_search.py  test_filtersets.py  test_graphql.py  test_ical_download.py  test_ical_generation.py  test_ical_utils.py  test_ical_view.py  test_impact_form_structure.py  test_impact_forms.py  test_impact_model.py  test_impact_sites_cache.py  test_maintenance_model.py  test_maintenance_serializers.py  test_messaging_api.py  test_messaging_models.py  test_messaging_views.py  test_model_methods.py  test_navigation.py  test_outage_api.py  test_outage_filters.py  test_outage_forms.py  test_outage_models.py  test_outage_serializers.py  test_outage_tables.py  test_outage_timezone.py  test_outage_urls.py  test_outage_views.py  test_permissions.py  test_recipient_discovery.py  test_reschedule_api.py  test_reschedule_form.py  test_reschedule_model.py  test_reschedule_view.py  test_sanitize_filter.py  (+11 more)
vendor_notification/: __init__.py  filtersets.py  ical_utils.py  models.py  timeline_utils.py  urls.py  views.py  widgets.py
(+40 files in other folders)
