[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["notices", "notices.*"]

[tool.setuptools.package-data]
notices = ["templates/**/*", "static/**/*"]

[project]
name = "netbox-notices"
keywords = ["notices"]
version = "1.1.2"
description = "Track maintenance and outage events across various NetBox models from vendors and internal sources."
readme = "README.md"
authors = [
    { name = "Jonathan Senecal", email = "contact@jonathansenecal.com" },
    { name = "Jason Yates", email = "me@jasonyates.co.uk" },
]
license-files = ["LICENSE"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

requires-python = ">=3.12"

dependencies = [
    "icalendar>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "bumpver",
    "pre-commit>=4.0.0",
    "pytest",
    "pytest-django>=4.5.0",
    "pytest-cov>=3.0.0",
    "ruff",
]
docs = [
    "zensical",
]

[project.urls]
Homepage = "https://github.com/jsenecal/netbox-notices"
Documentation = "https://jsenecal.github.io/netbox-notices/"
Source = "https://github.com/jsenecal/netbox-notices"
Tracker = "https://github.com/jsenecal/netbox-notices/issues"

[tool.bumpver]
current_version = "1.1.2"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "chore: bump version {old_version} -> {new_version}"
tag_pattern = "vMAJOR.MINOR.PATCH"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"',
]
"notices/__init__.py" = [
    '__version__ = "{version}"',
]
"CHANGELOG.md" = [
    '## \[Unreleased\]',
    '## \[{version}\] - {now:%Y-%m-%d}',
]

[tool.ruff]
line-length = 120
target-version = "py312"
extend-exclude = ["**/migrations/*.py", "parsers/"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "S", "B", "A", "C4", "C90", "DJ", "PIE"]
# TODO(future): B904 (raise from), S701 (jinja autoescape), S324 (md5),
# S308 (mark_safe), A004 (Warning shadow) are pre-existing issues that
# should be addressed in a follow-up code-quality pass; ignored here
# so the toolkit normalization PR doesn't conflate concerns.
ignore = ["E203", "E266", "E501", "N806", "S101", "DJ01", "DJ001", "B904", "S701", "S324", "S308", "A004"]

[tool.ruff.lint.mccabe]
max-complexity = 18

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]
"parsers/*" = ["E711", "E722"]
"notices/tables.py" = ["E501"]  # Template strings in ActionsColumn can exceed line length
".devcontainer/load_plugin_demo.py" = ["E402", "E501", "F841", "C901"]
"migrations/*" = ["N806", "N999"]
"tests/*" = ["S101", "S105", "S106", "E402", "F841", "B011"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=notices --cov-report=term-missing --reuse-db"
